fix: move lib version into property block in .pom fix: add modifier for UserService.id and FilmService.id fix: remove @Getter and @Setter from FilmService and UserService fix: add NotNull validation for Film.releaseDate fix: change UserService.checkName fix: change test cases